tests/dataset/tpc-ds/compiler/c/q29.error
/tmp/q29.c: In function ‘test_TPCDS_Q29_quantity_summary’:
/tmp/q29.c:366:57: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  366 |   if (test_TPCDS_Q29_quantity_summary_result.len != tmp1.len) {
      |                                                         ^
      |                                                         ->
/tmp/q29.c:370:66: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  370 |       if (test_TPCDS_Q29_quantity_summary_result.data[i3] != tmp1.data[i3]) {
      |                                                                  ^
      |                                                                  ->
/tmp/q29.c: In function ‘main’:
/tmp/q29.c:416:27: warning: implicit declaration of function ‘base_item_list_t_create’ [-Wimplicit-function-declaration]
  416 |   base_item_list_t tmp4 = base_item_list_t_create(
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/q29.c:417:18: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  417 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                  ^
      |                  ->
/tmp/q29.c:417:38: error: ‘(store_return_t *)&store_returns’ is a pointer; did you mean to use ‘->’?
  417 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                      ^
      |                                      ->
/tmp/q29.c:417:58: error: ‘(catalog_sale_t *)&catalog_sales’ is a pointer; did you mean to use ‘->’?
  417 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                                          ^
      |                                                          ->
/tmp/q29.c:417:73: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  417 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                                                         ^
      |                                                                         ->
/tmp/q29.c:418:15: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  418 |       date_dim.len * date_dim.len * store.len * item.len);
      |               ^
      |               ->
/tmp/q29.c:418:30: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  418 |       date_dim.len * date_dim.len * store.len * item.len);
      |                              ^
      |                              ->
/tmp/q29.c:418:42: error: ‘(store_t *)&store’ is a pointer; did you mean to use ‘->’?
  418 |       date_dim.len * date_dim.len * store.len * item.len);
      |                                          ^
      |                                          ->
/tmp/q29.c:418:53: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  418 |       date_dim.len * date_dim.len * store.len * item.len);
      |                                                     ^
      |                                                     ->
/tmp/q29.c:459:44: error: incompatible type for argument 1 of ‘contains_array_int’
  459 |                   if (!(contains_array_int(base, 3,
      |                                            ^~~~
      |                                            |
      |                                            list_int
/tmp/q29.c:63:36: note: expected ‘int *’ but argument is of type ‘list_int’
   63 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~
/tmp/q29.c:483:20: error: conflicting types for ‘base’; have ‘base_item_list_t’
  483 |   base_item_list_t base = tmp4;
      |                    ^~~~
/tmp/q29.c:412:12: note: previous definition of ‘base’ with type ‘list_int’
  412 |   list_int base = list_int_create(3);
      |            ^~~~
/tmp/q29.c:521:44: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  521 |   test_TPCDS_Q29_quantity_summary_result = result;
      |                                            ^~~~~~
